[package]
name = "unlockism"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/unlockism"
homepage = "https://github.com/al8n/unlockism"
documentation = "https://docs.rs/unlockism"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT/Apache-2.0"
rust-version = "1.73"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = ["crossbeam-utils/default"]

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
crossbeam-epoch = { version = "0.9", default-features = false }

[target.'cfg(loom)'.dependencies]
loom = "0.7"


[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
